# mcp-cpp

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  BUILD+TEST.MD  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Dockerfile.demo  LICENSE  README.md  SKILLS.MD  agents.md  roadmap.md  task.md
.codex/workflows/: agent-skill-gate.md
.cursor/rules/: 00-agent-skill-enforcement.mdc
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/activity-mirror/: events.jsonl
.github/workflows/: bearer-auth-demo.yml  ci.yml  release.yml
.windsurf/skills/repo-guardrails/: SKILL.md
.windsurf/workflows/: agent-skill-gate.md
docs/: cpp-sdk-comparison.md  index.md  parity-matrix.md  wsl2-docker-build-setup.md
docs/api/: auth.md  client.md  server.md  transport.md  typed.md  validation.md
examples/basic/: CMakeLists.txt  main.cpp
examples/conformance_server/: CMakeLists.txt  main.cpp
examples/json_test/: CMakeLists.txt  main.cpp
examples/keepalive_demo/: CMakeLists.txt  main.cpp
examples/logging_demo/: CMakeLists.txt  main.cpp
examples/mcp_client/: CMakeLists.txt  main.cpp
examples/mcp_server/: CMakeLists.txt  main.cpp
examples/resource_chunking/: CMakeLists.txt  main.cpp
examples/sampling_roundtrip/: CMakeLists.txt  main.cpp
examples/stdio_smoke/: CMakeLists.txt  main.cpp
examples/subscriptions_progress/: CMakeLists.txt  main.cpp
examples/typed_quickstart/: CMakeLists.txt  main.cpp
include/env/: EnvVars.h
include/logging/: Logger.h
include/mcp/: Client.h  ContentFramer.h  HTTPServer.hpp  HTTPTransport.hpp  InMemoryTransport.hpp  JSONRPCTypes.h  JsonRpcMessageRouter.h  Protocol.h  Server.h  SharedMemoryTransport.hpp  StdioTransport.hpp  Transport.h  version.h
include/mcp/async/: FutureAwaitable.h  Task.h
include/mcp/auth/: BearerAuth.hpp  IAuth.hpp  OAuth2ClientCredentialsAuth.hpp  OAuthClient.hpp  OAuthDiscovery.hpp  ServerAuth.hpp  WwwAuthenticate.hpp
include/mcp/errors/: Errors.h
include/mcp/typed/: ClientTyped.h  Content.h  Prompts.h  Sampling.h
include/mcp/validation/: Validation.h  Validators.h
scripts/: ci_all.sh  gdb_http_debug.sh  http_build.sh  http_down.sh  http_e2e.sh  http_e2e_all.sh  run_demo.sh  run_server_conformance.sh  test_stdio_hardening.sh
src/logging/: Logger.cpp
src/mcp/: Client.cpp  ConformanceServerSupport.h  ContentLengthFramer.cpp  HTTPServer.cpp  HTTPTransport.cpp  InMemoryTransport.cpp  JSONParser.cpp  JsonRpcMessageRouter.cpp  MetadataSupport.h  Server.cpp  SharedMemoryTransport.cpp  StdioTransport.cpp  TaskSupport.h  Transport.cpp  version.cpp
src/mcp/auth/: OAuth2ClientCredentialsAuth.cpp  OAuthClient.cpp  OAuthDiscovery.cpp  ServerAuth.cpp  WwwAuthenticate.cpp
tests/: CMakeLists.txt  test_acceptor_factory.cpp  test_acceptor_interface.cpp  test_architecture_enforcement.cpp  test_cancellation.cpp  test_capabilities_extensions.cpp  test_capabilities_logging.cpp  test_client_cache.cpp  test_client_cache_extended.cpp  test_client_paging.cpp  test_client_subscribe_uri.cpp  test_client_typed.cpp  test_completion_ping.cpp  test_conformance_server_support.cpp  test_content_framer.cpp  test_content_parity.cpp  test_elicitation.cpp  test_errors.cpp  test_handle_jsonrpc.cpp  test_http_auth.cpp  test_http_origin_validation.cpp  test_http_server_bearer.cpp  test_http_server_metadata.cpp  test_http_streamable.cpp  test_http_transport_errors.cpp  test_http_transport_www_auth.cpp  test_icon_parity.cpp  test_initialize_notifications.cpp  test_inmemory_concurrency.cpp  test_inmemory_transport.cpp  test_keepalive.cpp  test_keepalive_threshold_config.cpp  test_logging_rate_limit.cpp  test_message_router.cpp  test_negative_api.cpp  test_oauth_discovery.cpp  test_progress.cpp  test_prompt_pre_dispatch_cancel.cpp  test_prompts_get.cpp  test_read_resource.cpp  (+29 more)
tests/http/: CMakeLists.txt  Dockerfile  client_tests.cpp  docker-compose.yml  server_main.cpp
